Fix the header overlap on mobile

--- a/src/app/ui/nav/nav.component.scss
+++ b/src/app/ui/nav/nav.component.scss
@@ -3,6 +3,7 @@
 }
 .black-bg {
     font-size: 14px;
+    z-index: 2;
     background-color: #2E2925;
 }
 @media only screen and (max-width: 768px) {
